[gd_scene load_steps=17 format=2]

[ext_resource path="res://Img/player.png" type="Texture" id=1]
[ext_resource path="res://Fonts/MochiyPopPOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Img/pause_button.png" type="Texture" id=3]
[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=4]
[ext_resource path="res://Audio/game-music.mp3" type="AudioStream" id=5]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 0.862745 )
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 526, 526 )

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 5
outline_color = Color( 0, 0, 0, 0.470588 )
extra_spacing_char = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 50
outline_size = 5
outline_color = Color( 0, 0, 0, 0.470588 )
extra_spacing_char = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 100
outline_size = 8
outline_color = Color( 0.835294, 0.823529, 0.054902, 0.784314 )
extra_spacing_char = 5
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 110.5, 680 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 130.5, 683 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 540, 58 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 540, 58 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 3
outline_color = Color( 0, 0, 0, 0.470588 )
extra_spacing_char = 2
font_data = ExtResource( 2 )

[node name="Game" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -540.0
margin_top = -960.0
margin_right = 540.0
margin_bottom = 960.0
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundGlobal" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1000.0
margin_top = -1500.0
margin_right = 1000.0
margin_bottom = 1500.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.862745 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundGame" type="PanelContainer" parent="."]
margin_top = 420.0
margin_right = 1080.0
margin_bottom = 1500.0
mouse_filter = 2
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameArea" type="StaticBody2D" parent="."]
position = Vector2( 0, 420 )
collision_mask = 0
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea"]
position = Vector2( 539, 538 )
shape = SubResource( 9 )

[node name="MenuTop" type="Control" parent="."]
margin_top = 270.0
margin_right = 1080.0
margin_bottom = 420.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="MenuTop"]
margin_right = 1080.0
margin_bottom = 150.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="TextureButton" parent="MenuTop"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -32.0
margin_bottom = 32.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Control" parent="MenuTop"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = -16.5
margin_right = 80.0
margin_bottom = 16.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MenuTop/HighScore"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -68.0
margin_right = 387.0
margin_bottom = 68.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="MenuTop/HighScore/VBoxContainer"]
margin_right = 387.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 1 )
text = "HIGH LEVEL"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="MenuTop/HighScore/VBoxContainer"]
margin_top = 63.0
margin_right = 387.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 7 )
text = "10"
align = 1

[node name="Score" type="Label" parent="MenuTop"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.0
margin_top = -72.5
margin_right = 74.0
margin_bottom = 72.5
custom_fonts/font = SubResource( 3 )
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bullets" type="Node2D" parent="."]

[node name="MenuBottom" type="Control" parent="."]
margin_top = 1505.0
margin_right = 1080.0
margin_bottom = 1655.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="MenuBottom"]
margin_right = 1080.0
margin_bottom = 150.0
color = Color( 0, 0, 0, 0.862745 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameAreaLimit" type="Node2D" parent="."]

[node name="LeftWall" type="StaticBody2D" parent="GameAreaLimit" groups=["Wall"]]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameAreaLimit/LeftWall"]
position = Vector2( -110.5, 984 )
shape = SubResource( 10 )

[node name="RightWall" type="StaticBody2D" parent="GameAreaLimit" groups=["Wall"]]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameAreaLimit/RightWall"]
position = Vector2( 1210.5, 984 )
shape = SubResource( 11 )

[node name="TopWall" type="StaticBody2D" parent="GameAreaLimit" groups=["Wall"]]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameAreaLimit/TopWall"]
position = Vector2( 540, 362 )
shape = SubResource( 12 )

[node name="BottomWall" type="StaticBody2D" parent="GameAreaLimit" groups=["Floor"]]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameAreaLimit/BottomWall"]
position = Vector2( 540, 1605 )
shape = SubResource( 13 )

[node name="Blocks" type="Node2D" parent="."]
position = Vector2( 0, 420 )

[node name="Player" type="Node2D" parent="."]
position = Vector2( 545, 1463 )
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 1 )

[node name="NumberBalls" type="Label" parent="Player"]
margin_left = 5.0
margin_top = -62.0
margin_right = 45.0
margin_bottom = -38.0
custom_fonts/font = SubResource( 4 )
text = "x0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BulletAim" type="Node2D" parent="Player"]

[node name="Timer" type="Timer" parent="Player"]
wait_time = 5.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 5 )
volume_db = -20.0
autoplay = true

[connection signal="input_event" from="GameArea" to="Player" method="_on_GameArea_input_event"]
[connection signal="pressed" from="MenuTop/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="drawBulletAim" from="Player" to="." method="_on_Player_drawBulletAim"]
[connection signal="timeout" from="Player/Timer" to="Player" method="_on_Timer_timeout"]
